--- a/styles/style.css
+++ b/styles/style.css
@@ -168,6 +168,7 @@ header
     margin: 130px auto;
     background:url("../images/watch.png"), linear-gradient(to right, #F15B22, rgba(0, 0, 0, 0.1));
     background-blend-mode: overlay;
+    background-size: cover;
     background-repeat: no-repeat;
     border-radius: 10px;
 }
