--- a/styles/style.css
+++ b/styles/style.css
@@ -128,6 +128,35 @@ header
     color: #16D887;
     margin-right: 5px;
 }
+/* success sections styles */
+.success
+{
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 80px;
+    align-items: center;
+    justify-content: center;
+}
+.success-img img
+{
+    width: 560px;
+}
+.success-texts
+{
+    display: flex;
+    flex-direction: column;
+    width: 415px;
+}
+.success ul
+{
+    list-style: none;
+    color: #444343;
+}
+.success ul i
+{
+    color: #16D887;
+    margin-right: 5px;
+}
 
 /* My plans styles */
 .plans
